DFG byte array support sometimes clamps values incorrectly https://bugs.webkit.org/show_bug.cgi?id=71975

Source/JavaScriptCore: 

Reviewed by Oliver Hunt.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compilePutByValForByteArray):

LayoutTests: 

Reviewed by Oliver Hunt.
        
Added a test for byte arrays, and fixed a small bug in dfg-min-max.js.

* fast/js/dfg-byte-array-put-expected.txt: Added.
* fast/js/dfg-byte-array-put.html: Added.
* fast/js/script-tests/dfg-byte-array-put.js: Added.
(doPut):
(doGet):
* fast/js/script-tests/dfg-min-max.js:



git-svn-id: svn://svn.chromium.org/blink/trunk@99917 bbb929c8-8fbe-4397-9dbb-9b2b20218538