Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp
@@ -704,9 +704,10 @@ void SpeculativeJIT::compilePutByValForByteArray(GPRReg base, GPRReg property, N
         GPRReg scratchReg = scratch.gpr();
         m_jit.move(valueOp.gpr(), scratchReg);
         MacroAssembler::Jump inBounds = m_jit.branch32(MacroAssembler::BelowOrEqual, scratchReg, TrustedImm32(0xff));
-        m_jit.branch32(MacroAssembler::GreaterThan, scratchReg, TrustedImm32(0xff));
+        MacroAssembler::Jump tooBig = m_jit.branch32(MacroAssembler::GreaterThan, scratchReg, TrustedImm32(0xff));
         m_jit.xorPtr(scratchReg, scratchReg);
         MacroAssembler::Jump clamped = m_jit.jump();
+        tooBig.link(&m_jit);
         m_jit.move(TrustedImm32(255), scratchReg);
         clamped.link(&m_jit);
         inBounds.link(&m_jit);
