third_party/WebKit/LayoutTests/fast/js/script-tests/dfg-min-max.js
@@ -39,3 +39,5 @@ shouldBe("doMax(NaN, 1.5)", "NaN");
 shouldBe("doMax(NaN, 2.5)", "NaN");
 
 shouldBe("doMax(NaN, NaN)", "NaN");
+
+var successfullyParsed = true;
